ejercicios de practica  de  sass

--- a/repaso/sass/aprendizaje/Variables - Import - Partials/style/_variables.scss
+++ b/repaso/sass/aprendizaje/Variables - Import - Partials/style/_variables.scss
@@ -1,4 +1,13 @@
 /* Define standard variables and values for website */
+/**
+strings
+numbers
+colors
+booleans
+lists
+nulls
+ */
+
 $bgcolor: lightblue;
 $textcolor: darkblue;
 $fontsize: 18px;
