--- a/repaso/sass/aprendizaje/Variables - Import - Partials/style/style.css
+++ b/repaso/sass/aprendizaje/Variables - Import - Partials/style/style.css
@@ -2,11 +2,9 @@
 /*segmentación de estilos*/
 /* Define standard variables and values for website */
 /* Use the variables */
-/* line 5, ../../../sass/ejemplo 1/style/style.scss */
 body {
   background-color: lightblue;
   color: darkblue;
-  font-size: 18px;
-}
+  font-size: 18px; }
 
 /*# sourceMappingURL=style.css.map */
