--- a/repaso/sass/ejemplos/ejemplo 3/style/style.css
+++ b/repaso/sass/ejemplos/ejemplo 3/style/style.css
@@ -2,15 +2,12 @@
 /*variables*/
 /*estilos generales*/
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 body {
-  font-family: Calibri, Arial, Helvetica, sans-serif;
-}
+  font-family: Calibri, Arial, Helvetica, sans-serif; }
 
 /*header*/
 header {
@@ -21,36 +18,24 @@ header {
   height: 60px;
   background: #fff;
   padding: 5px 30px;
-  border-bottom: 2px solid #1fb3ed;
-}
-
+  border-bottom: 2px solid #1fb3ed; }
 header .logo {
-  float: left;
-}
-
+  float: left; }
 header h1 {
   float: left;
   margin-left: 10px;
-  line-height: 60px;
-}
-
+  line-height: 60px; }
 header nav {
-  float: right;
-}
-
+  float: right; }
 header nav li {
   display: inline;
   padding-left: 10px;
   list-style: none;
   line-height: 60px;
-  color: #000;
-}
-
+  color: #000; }
 header nav li:hover {
   color: #1fb3ed;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
-}
+  transition: all 1s ease; }
 
 /*main*/
 /*estilos generales de main*/
@@ -59,13 +44,11 @@ h2 {
   font-size: 24px;
   text-align: center;
   margin: 0;
-  padding-bottom: 15px;
-}
+  padding-bottom: 15px; }
 
 p {
   color: gray;
-  font-size: 16px;
-}
+  font-size: 16px; }
 
 .btn {
   margin: 20px auto;
@@ -74,52 +57,36 @@ p {
   color: #fff;
   background: linear-gradient(109.6deg, #1fb3ed 11.2%, #7adbec 91.1%);
   border-radius: 5px;
-  border: 2px solid rgba(255, 255, 255, 0);
-}
+  border: 2px solid rgba(255, 255, 255, 0); }
 
 .btn:hover {
   border: 2px solid #1fb3ed;
   color: #000;
-  background: none;
-}
+  background: none; }
 
 /*estilos particulares*/
 main {
-  padding-top: 50px;
-}
-
+  padding-top: 50px; }
 main .articleContainer {
-  padding: 40px 10px;
-}
-
+  padding: 40px 10px; }
 main .articleContainer .articuloIzquierdo {
   float: left;
-  width: 50%;
-}
-
+  width: 50%; }
 main .articleContainer .articuloDerecho {
   display: inline-block;
-  width: 50%;
-}
-
+  width: 50%; }
 main .contact form {
   border: 2px solid #1fb3ed;
   padding: 10px;
   width: 300px;
-  margin: 0 auto;
-}
-
+  margin: 0 auto; }
 main .contact label, main .contact button, main .contact input {
   width: 100%;
   display: block;
-  margin-top: 5px;
-}
-
+  margin-top: 5px; }
 main .contact input {
-  padding: 10px;
-}
-
+  padding: 10px; }
 main .contact button {
-  margin: 15px 0;
-}
+  margin: 15px 0; }
+
 /*# sourceMappingURL=style.css.map */
