--- a/repaso/sass/aprendizaje/extend/style/style.scss
+++ b/repaso/sass/aprendizaje/extend/style/style.scss
@@ -1,11 +1,18 @@
-@mixin important-text {
-    color: red;
-    font-size: 25px;
-    font-weight: bold;
-    border: 1px solid blue;
+.button-basic  {
+    border: none;
+    padding: 15px 30px;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
 }
 
-.danger {
-    @include important-text;
+.button-report  {
+    @extend .button-basic;
+    background-color: red;
+}
+
+.button-submit  {
+    @extend .button-basic;
     background-color: green;
+    color: white;
 }
