--- a/repaso/sass/aprendizaje/Mixin/ejemplo 1/style/style.css
+++ b/repaso/sass/aprendizaje/Mixin/ejemplo 1/style/style.css
@@ -1,16 +1,7 @@
-.button-basic, .button-report, .button-submit {
-  border: none;
-  padding: 15px 30px;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.button-report  {
-  background-color: red;
-}
-
-.button-submit  {
+.danger {
+  color: red;
+  font-size: 25px;
+  font-weight: bold;
+  border: 1px solid blue;
   background-color: green;
-  color: white;
 }
