--- a/repaso/sass/aprendizaje/extend/style/style.css
+++ b/repaso/sass/aprendizaje/extend/style/style.css
@@ -1,7 +1,16 @@
-.danger {
-  color: red;
-  font-size: 25px;
-  font-weight: bold;
-  border: 1px solid blue;
+.button-basic, .button-report, .button-submit {
+  border: none;
+  padding: 15px 30px;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.button-report  {
+  background-color: red;
+}
+
+.button-submit  {
   background-color: green;
+  color: white;
 }
