--- a/clases/10-flexbox/ejemplos/2.flex-direction: row - column/style.css
+++ b/clases/10-flexbox/ejemplos/2.flex-direction: row - column/style.css
@@ -1,4 +1,4 @@
-/*1.2.flex-direction*/
+/*1.2.flex-direction: row - column : direccion de los elementos en el contenedor*/
 .row {
     display: flex;
     flex-direction: row;
