--- a/clases/10-flexbox/ejemplos/3.flex-direction: wrap/style.css
+++ b/clases/10-flexbox/ejemplos/3.flex-direction: wrap/style.css
@@ -1,9 +1,11 @@
+/*1.2.flex-direction: row - column*/
+/**
+especifica si los elementos son forzados a una
+sola linea  o pueden ser envueltos en multiples lineas
+ */
 
-/*1.2.flex-direction*/
-.flex {
-    display: flex;
-}
 
+/*los elementos se envuelven alrededor de líneas adicionales*/
 .wrap {
     border: 1px solid #000;
     width: 200px;
@@ -11,6 +13,8 @@
     flex-direction: row;
     flex-wrap: wrap;
 }
+
+/*cada elemento se ajusta a una sola linea*/
 .nowrap {
     border: 1px solid #000;
     width: 200px;
@@ -18,6 +22,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
 }
+/*Los elementos se envuelven alrededor de líneas adicionales en reversa*/
 .wrap_reverse {
     border: 1px solid #000;
     width: 200px;
