--- a/clases/10-flexbox/ejemplos/6.align-items/style.css
+++ b/clases/10-flexbox/ejemplos/6.align-items/style.css
@@ -1,3 +1,6 @@
+/*alinea los elementos verticalmente
+*/
+
 .ai {
     width: 500px;
     height: 300px;
@@ -8,7 +11,7 @@
 .ai-col {
     width: 500px;
     height: 300px;
-    border: 1px solid #000;
+    border: 1px solid #e50e0e;
     display: flex;
     flex-flow: column wrap;
 }
