--- a/clases/10-flexbox/ejemplos/7.align-content/style.css
+++ b/clases/10-flexbox/ejemplos/7.align-content/style.css
@@ -1,4 +1,5 @@
 
+/*alista las lineas del  contenedor*/
 /*align-content*/
 .ac {
     border: 1px solid #000;
@@ -8,7 +9,7 @@
     flex-flow: row wrap;
 }
 .ac-col {
-    border: 1px solid #000;
+    border: 1px solid #e01010;
     width: 300px;
     height: 300px;
     display: flex;
