actualziacion de carpetas

--- a/clases/10-flexbox/ejemplos/6.align-items/style.css
+++ b/clases/10-flexbox/ejemplos/6.align-items/style.css
@@ -1,4 +1,5 @@
-/*alinea los elementos verticalmente
+/*alinea los elementos verticalmente:
+demo: https://developer.mozilla.org/es/docs/Web/CSS/align-items
 */
 
 .ai {
