--- a/clases/11- flexbox avanzado/ejemplos/v1/2.flex-shrink/style.css
+++ b/clases/11- flexbox avanzado/ejemplos/v1/2.flex-shrink/style.css
@@ -1,3 +1,7 @@
+/**
+Especifica el factor de contracción de un flex item
+ */
+
 .shrink-container {
     padding: 0;
     margin: 0;
@@ -12,12 +16,12 @@
     font-weight: bold;
     font-size: 2em;
     text-align: center;
-    flex-basis: 20em
+    flex-basis: 10em
 }
 
 .flex1 {
-    flex-shrink: 1
+    flex-shrink: 0.5
 }
 .flex2 {
-    flex-shrink: 2
+    flex-shrink: 0.7
 }
