--- a/clases/11- flexbox avanzado/ejemplos/v1/3.order/style.css
+++ b/clases/11- flexbox avanzado/ejemplos/v1/3.order/style.css
@@ -1,3 +1,7 @@
+/**
+Especifica el orden utilizado para disponer los elementos en su contenedor flexible
+ */
+
 .order-container{
     display: flex;
 }
@@ -13,4 +17,9 @@
     flex-basis: 200px;
 }
 
-.order-item:nth-of-type(2) { order: 1; }
+/*
+ 0 ::  no  cambia
+ 1 :: se mueve al final
+ -1 :: al inicio
+*/
+.order-item:nth-of-type(3) { order: 1; }
