--- a/repaso/sass/aprendizaje/Nesting/style/style.css
+++ b/repaso/sass/aprendizaje/Nesting/style/style.css
@@ -9,4 +9,4 @@ nav a {
   padding: 6px 12px;
   text-decoration: none; }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=grid.css.map */
