--- a/repaso/sass/ejemplos/ejemplo 1/style/style.css
+++ b/repaso/sass/ejemplos/ejemplo 1/style/style.css
@@ -78,4 +78,4 @@ form .ctn-btn button[type="reset"] {
 form .ctn-btn button[type="submit"] {
   background: #8EB1C7;
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=grid.css.map */
