--- a/repaso/sass/ejemplos/ejemplo 3/style/style.css
+++ b/repaso/sass/ejemplos/ejemplo 3/style/style.css
@@ -89,4 +89,4 @@ main .contact input {
 main .contact button {
   margin: 15px 0; }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=grid.css.map */
