--- a/repaso/css/ejemplos/ejemplo 2/style/style.css
+++ b/repaso/css/ejemplos/ejemplo 2/style/style.css
@@ -122,4 +122,4 @@ footer {
         footer .contact a img:hover {
           background: #fae76e; }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=grid.css.map */
