--- a/clases/11- flexbox avanzado/actividades/actividad 1/style.css
+++ b/clases/11- flexbox avanzado/actividades/actividad 1/style.css
@@ -26,7 +26,6 @@ header nav ul {
     flex-flow: row wrap;
 }
 
-
 header nav ul li {
     padding: 0 20px;
 }
@@ -36,8 +35,8 @@ header nav ul li:last-child {
 }
 
 aside {
+    width: 300px;
     padding: 40px;
-    width: 20%;
     flex-shrink: 0;
     border-right: 2px solid #000;
 }
@@ -47,7 +46,7 @@ aside ul {
 }
 
 main {
-    padding: 40px;
+    padding: 40px 10%;
     width: calc( 100% - 300px);
 }
 
@@ -62,60 +61,69 @@ main section article img {
     margin-right: 20px;
 }
 
-
-
-/**
-responsive
- */
-@media screen and (max-width: 800px) {
-    main section article {
-        display: flex;
-        flex-flow: column nowrap;
-        align-items: center;
-        padding-bottom: 40px;
-    }
-
-    main section article img {
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
-
-    main section article:nth-child(2n) img {
-        order: unset;
-        margin-left: 0;
-    }
+main section article:nth-child(2n) img {
+    order: 2;
+    margin-right: 0;
+    margin-left: 20px;
 }
-
-@media screen and (max-width: 600px) {
-    header nav ul li {
-        padding: 0 10px;
-    }
-
-    header nav ul li:last-child {
-        padding: 0;
-    }
-
+@media screen and (max-width: 1000px) {
     aside {
-        padding: 10px 40px;
-        width: 100%;
-        order: 2;
-        border-right: unset;
-        border-top: 2px solid #000;
-    }
-
-    aside ul {
-        list-style: none;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-    }
-
-    aside ul li {
-        padding: 10px;
+        width: 120px;
     }
 
     main {
-        width: 100%;
+        width: calc(100% - 120px);
+    }
+
+    @media screen and (max-width: 800px) {
+        main section article {
+            display: flex;
+            flex-flow: column nowrap;
+            align-items: center;
+            padding-bottom: 40px;
+        }
+
+        main section article img {
+            margin-right: 0;
+            margin-bottom: 20px;
+        }
+
+        main section article:nth-child(2n) img {
+            order: unset;
+            margin-left: 0;
+        }
+    }
+
+    @media screen and (max-width: 600px) {
+        header nav ul li {
+            padding: 0 10px;
+        }
+
+        header nav ul li:last-child {
+            padding: 0;
+        }
+
+        aside {
+            padding: 10px 40px;
+            width: 100%;
+            order: 2;
+            border-right: unset;
+            border-top: 2px solid #000;
+        }
+
+        aside ul {
+            list-style: none;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+        }
+
+        aside ul li {
+            padding: 10px;
+        }
+
+        main {
+            width: 100%;
+        }
     }
 }
-
