--- a/clases/12.Grids/ejemplos/3.grid-template-row/style.css
+++ b/clases/12.Grids/ejemplos/3.grid-template-row/style.css
@@ -4,16 +4,5 @@
 
 /*grid-template-row*/
 .tem-row {
-    grid-template-rows: repeat(4, 1fr 2fr);
-}
-
-/*grid-template*/
-.tem-row-col {
-    grid-template: 1fr 1fr / repeat(4, 1fr);
-}
-
-/*5.grid-gap*/
-.gap-row {
-    grid-template: repeat(2, 1fr) / repeat(4, 1fr);
-    grid-row-gap: 5px;
+    grid-template-rows: repeat(4, 1fr);
 }
